tdf#150201 Fix endianness for placeable WMF

The constant PLACEABLE_SIGNATURE in graphicfilter2.cxx had wrong
endianness, which would cause the WMF file detection to fail for
placeable WMFs. Changed endianness since WMF files are in little endian.
Also added test using placeable and non-placeable WMFs.

To run the test:
make CPPUNIT_TEST_NAME="testDetectWMF" -sr CppunitTest_vcl_graphic_test

Change-Id: Ia3c61bae5ab27375636f21bc902f773804cf9273